# VexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: app.cpp  app.h  command.cpp  command.h  denoiser.cpp  denoiser.h  editor_ui.cpp  editor_ui.h  editor_ui_hierarchy.cpp  editor_ui_inspector.cpp  editor_ui_settings.cpp  editor_ui_viewport.cpp  file_dialog.cpp  file_dialog.h  main.cpp  mesh_group_save.h  render_mode.h  render_mode_compute_raytrace.cpp  render_mode_compute_raytrace.h  render_mode_cpu_raytrace.cpp  render_mode_cpu_raytrace.h  render_mode_gpu_raytrace.cpp  render_mode_gpu_raytrace.h  render_mode_rasterize.cpp  render_mode_rasterize.h  scene.cpp  scene.h  scene_geometry_cache.cpp  scene_geometry_cache.h  scene_importer.cpp  scene_importer.h  scene_renderer.cpp  scene_renderer.h  selection.h
assets/scenes/CornellBox/: CornellBox-Glossy.mtl  CornellBox-Water.mtl
backends/opengl/: CMakeLists.txt
backends/opengl/include/vex/opengl/: gl_buffer.h  gl_context.h  gl_framebuffer.h  gl_gpu_raytracer.h  gl_mesh.h  gl_shader.h  gl_skybox.h  gl_texture.h
backends/opengl/src/: gl_buffer.cpp  gl_context.cpp  gl_framebuffer.cpp  gl_gpu_raytracer.cpp  gl_mesh.cpp  gl_shader.cpp  gl_skybox.cpp  gl_texture.cpp
backends/vulkan/: CMakeLists.txt
backends/vulkan/include/vex/vulkan/: vk_buffer.h  vk_compute_raytracer.h  vk_context.h  vk_framebuffer.h  vk_gpu_raytracer.h  vk_gpu_timer.h  vk_mesh.h  vk_shader.h  vk_skybox.h  vk_texture.h
backends/vulkan/src/: vk_buffer.cpp  vk_compute_raytracer.cpp  vk_context.cpp  vk_framebuffer.cpp  vk_gpu_raytracer.cpp  vk_gpu_timer.cpp  vk_init.cpp  vk_mesh.cpp  vk_shader.cpp  vk_skybox.cpp  vk_texture.cpp
cmake/: CompilerSettings.cmake
cmake/modules/: ShaderCompilation.cmake
cmake/modules/imgui/: CMakeLists.txt
cmake/modules/stb/: CMakeLists.txt
cmake/modules/tinyexr/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: tiny_obj_loader.h
engine/include/vex/core/: camera.h  engine.h  input.h  log.h  window.h
engine/include/vex/graphics/: buffer.h  framebuffer.h  graphics_context.h  mesh.h  shader.h  skybox.h  texture.h
engine/include/vex/raytracing/: bsdf.h  bvh.h  cpu_raytracer.h  hit.h  ray.h
engine/include/vex/scene/: mesh_data.h  primitives.h
engine/include/vex/ui/: ui_layer.h
engine/src/core/: camera.cpp  engine.cpp  input.cpp  log.cpp  tiny_gltf_impl.cpp  window.cpp
engine/src/raytracing/: bvh.cpp  cpu_raytracer.cpp
engine/src/scene/: gltf_loader.cpp  mesh_data.cpp  primitives.cpp
engine/src/ui/: ui_layer.cpp
shaders/opengl/: bloom_blur.frag  bloom_threshold.frag  envmap.frag  envmap.vert  fullscreen.frag  fullscreen.vert  fullscreen_rt.frag  mesh.frag  mesh.vert  outline.frag  outline.vert  outline_mask.vert  pathtracer.comp  pick.frag  pick.vert  shadow.frag  shadow.vert
shaders/vulkan/: bloom_blur.frag  bloom_threshold.frag  envmap.frag  envmap.vert  fullscreen.frag  fullscreen.vert  fullscreen_rt.frag  mesh.frag  mesh.vert  outline_mask.vert  pathtracer.comp  rt.common.glsl  rt.rahit  rt.rchit  rt.rgen  rt.rmiss  rt.shadow.rmiss  shadow.frag  shadow.vert
tests/: CMakeLists.txt  test_bsdf.cpp  test_bvh.cpp  test_camera.cpp  test_main.cpp  test_primitives.cpp  test_raytracer.cpp
